# haunted_house

./: .gitignore  CMakeLists.txt  README.md
include/: audio.h  debug.h  entity.h  falling_object.h  game.h  ghost.h  player.h  scoreboard.h  splash.h  sprite.h
resources/: library_background.png~
src/: audio.cpp  debug.cpp  falling_object.cpp  game.cpp  ghost.cpp  main.cpp  player.cpp  scoreboard.cpp  splash.cpp  sprite.cpp
